# qlora-presentation

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml  ruff.toml  test.py
Documents/: Script.md
Notebooks/: main.ipynb  test.ipynb
media/Tex/: 0272d8f5d22a6456.tex  05b5ee63c229fc61.tex  0705bd8ce33e80a5.tex  0f50d94b64fde769.tex  10c4134b81560eaa.tex  13d09496cf8ccb02.tex  14fe0dac83a7af03.tex  15cb37e25780b960.tex  16aa113d4b9a8310.tex  187a55d7ebb4508a.tex  198c9fd8064736af.tex  19e71c07a2cfccd1.tex  1cdde02d8197e8b3.tex  2da29d9d85e4ff9c.tex  2ddacbd254b8c58d.tex  2eaab264ad7f1b67.tex  37a31ae488c17f87.tex  3ba87d57965f5ce3.tex  3c7ce3c4d1839a2c.tex  3f1e78dcc6375523.tex  3f30e7c7183c12a8.tex  40a9066e97c2eab2.tex  490a6871a2a2da8d.tex  4956b2cd9c2c4563.tex  50af245a2dd28725.tex  540b9fad6670e40c.tex  563c11d16a316842.tex  5c8506cc36f31251.tex  5e7b54e047e55d69.tex  617a5a7639dae153.tex  6563bf969d1e9e6e.tex  68b9151ef4eb13bd.tex  6cb748dce59b1013.tex  73fb27456189b4d3.tex  7803c1537965568f.tex  785586572f532a9b.tex  878f0f8e99ca29fb.tex  9811dac874d20d83.tex  996df028fb556fe6.tex  9bbb4b1731e72d2d.tex  (+33 more)
media/videos/main/1440p120/partial_movie_files/Main/: partial_movie_file_list.txt
media/videos/test/1080p60/partial_movie_files/Test/: partial_movie_file_list.txt
slides/: Main.json  Test.json
src/qlora_presentation/: __init__.py
src/qlora_presentation/assets/: __init__.py
src/qlora_presentation/visualisation/: styles.py
